--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "@binance-chain/bsc-use-wallet": "^0.8.1",
     "@crowdin/crowdin-api-client": "^1.10.1",
-    "@material-ui/core": "^4.11.3",
     "@ethersproject/abi": "^5.0.7",
+    "@material-ui/core": "^4.11.3",
     "@pancakeswap-libs/uikit": "goosedefi/goose-uikit",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/react": "^17.0.0",
@@ -38,6 +38,7 @@
     "chart.js": "^2.9.4",
     "iframe-resizer-react": "^1.1.0",
     "lodash": "^4.17.20",
+    "mountaindefi-uikit": "0.10.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-countup": "^4.3.3",
